--- a/app/client/package.json
+++ b/app/client/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "14.2.3",
+    "next-client-cookies": "^1.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-jwt": "^1.2.1"
   },
   "devDependencies": {
     "eslint": "^8",
