--- a/app/client/package.json
+++ b/app/client/package.json
@@ -18,7 +18,8 @@
     "next-client-cookies": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-jwt": "^1.2.1"
+    "react-jwt": "^1.2.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "eslint": "^8",
